bigapps/Weblogic12medrec fails with assert(check_call_consistency(jvms, cg)) failed: inconsistent info

XMLWordPrintable

    • b159
    • Verified

        In the nightlies of 2016-02-10, bigapps/Weblogic12medrec fails with

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/doCall.cpp:596
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/jprt/T/P1/223512.cphillim/s/hotspot/src/share/vm/opto/doCall.cpp:596), pid=918, tid=1081

        It seems that the trigger of the same assert was already handled by JDK-8166110 and its follow-up JDK-8174721. The nightly failure happened with the builds for Coleen's push job for JDK-8173743. That build already includes the fixes for JDK-8166110 and JDK-8174721.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Zoltan Majo (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: